{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 93,
  "lineage": "ade50582-bd08-2485-3e65-fabebac49049",
  "resources": [
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/networkInterfaces/dev-nic",
            "internal_domain_name_suffix": "l4sx2ch3gniupo2plso3fwk5hb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.20.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/virtualNetworks/dev-10/subnets/DevSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-18-26-20",
            "name": "dev-nic",
            "private_ip_address": "10.20.1.4",
            "private_ip_addresses": [
              "10.20.1.4"
            ],
            "resource_group_name": "DevRG",
            "virtual_machine_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Compute/virtualMachines/dev-vmt01"
          },
          "dependencies": [
            "module.module_dev.azurerm_resource_group.rg",
            "module.module_dev.azurerm_subnet.subnet1",
            "module.module_dev.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "location": "eastus",
            "name": "dev-nsg1",
            "resource_group_name": "DevRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_dev.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "dev-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "DevRG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_dev.azurerm_network_security_group.nsg1",
            "module.module_dev.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/virtualNetworks/dev-10/subnets/DevSubnet",
            "name": "DevSubnet",
            "resource_group_name": "DevRG",
            "virtual_network_name": "dev-10"
          },
          "dependencies": [
            "module.module_dev.azurerm_resource_group.rg",
            "module.module_dev.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/virtualNetworks/dev-10/subnets/DevSubnet",
            "network_security_group_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "subnet_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/virtualNetworks/dev-10/subnets/DevSubnet"
          },
          "dependencies": [
            "module.module_dev.azurerm_network_security_group.nsg1",
            "module.module_dev.azurerm_resource_group.rg",
            "module.module_dev.azurerm_subnet.subnet1",
            "module.module_dev.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "087ea55f-33fd-4751-bb8f-5c9dd2d95f39",
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/virtualNetworks/dev-10",
            "location": "eastus",
            "name": "dev-10",
            "resource_group_name": "DevRG",
            "subnet": [
              {
                "address_prefix": "10.20.1.0/24",
                "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/virtualNetworks/dev-10/subnets/DevSubnet",
                "name": "DevSubnet",
                "security_group": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/DevRG/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1"
              }
            ]
          },
          "dependencies": [
            "module.module_dev.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.module_prod",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "module.module_prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/ProdRG/providers/Microsoft.Network/networkInterfaces/prod-nic",
            "internal_domain_name_suffix": "ujdwzkegeruuncutoe2lzy44wg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.40.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/ProdRG/providers/Microsoft.Network/virtualNetworks/prod-10/subnets/ProdSubnet"
              }
            ],
            "location": "eastus",
            "name": "prod-nic",
            "private_ip_address": "10.40.1.4",
            "private_ip_addresses": [
              "10.40.1.4"
            ],
            "resource_group_name": "ProdRG"
          },
          "dependencies": [
            "module.module_prod.azurerm_resource_group.rg",
            "module.module_prod.azurerm_subnet.subnet1",
            "module.module_prod.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_prod",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "module.module_prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/ProdRG/providers/Microsoft.Network/networkSecurityGroups/prod-nsg1",
            "location": "eastus",
            "name": "prod-nsg1",
            "resource_group_name": "ProdRG",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_prod.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.module_prod",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "module.module_prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/ProdRG/providers/Microsoft.Network/networkSecurityGroups/prod-nsg1/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "prod-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "ProdRG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_prod.azurerm_network_security_group.nsg1",
            "module.module_prod.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.module_prod",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "module.module_prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.40.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/ProdRG/providers/Microsoft.Network/virtualNetworks/prod-10/subnets/ProdSubnet",
            "name": "ProdSubnet",
            "resource_group_name": "ProdRG",
            "virtual_network_name": "prod-10"
          },
          "dependencies": [
            "module.module_prod.azurerm_resource_group.rg",
            "module.module_prod.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_prod",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "module.module_prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/ProdRG/providers/Microsoft.Network/virtualNetworks/prod-10/subnets/ProdSubnet",
            "network_security_group_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/ProdRG/providers/Microsoft.Network/networkSecurityGroups/prod-nsg1",
            "subnet_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/ProdRG/providers/Microsoft.Network/virtualNetworks/prod-10/subnets/ProdSubnet"
          },
          "dependencies": [
            "module.module_prod.azurerm_network_security_group.nsg1",
            "module.module_prod.azurerm_resource_group.rg",
            "module.module_prod.azurerm_subnet.subnet1",
            "module.module_prod.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_prod",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "module.module_prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.40.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a86c47a2-2486-4669-8a93-7138bce3deb6",
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/ProdRG/providers/Microsoft.Network/virtualNetworks/prod-10",
            "location": "eastus",
            "name": "prod-10",
            "resource_group_name": "ProdRG"
          },
          "dependencies": [
            "module.module_prod.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.module_uat",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "module.module_uat.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/networkInterfaces/uat-nic",
            "internal_domain_name_suffix": "sve0eys15pnuxofvh1dll11qzg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.30.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/virtualNetworks/uat-10/subnets/UATSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-1C-40-7D",
            "name": "uat-nic",
            "private_ip_address": "10.30.1.4",
            "private_ip_addresses": [
              "10.30.1.4"
            ],
            "resource_group_name": "UATRG",
            "virtual_machine_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Compute/virtualMachines/uat-vmt01"
          },
          "dependencies": [
            "module.module_uat.azurerm_resource_group.rg",
            "module.module_uat.azurerm_subnet.subnet1",
            "module.module_uat.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_uat",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "module.module_uat.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/networkSecurityGroups/uat-nsg1",
            "location": "eastus",
            "name": "uat-nsg1",
            "resource_group_name": "UATRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_uat.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.module_uat",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "module.module_uat.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/networkSecurityGroups/uat-nsg1/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "uat-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "UATRG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_uat.azurerm_network_security_group.nsg1",
            "module.module_uat.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.module_uat",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "module.module_uat.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/virtualNetworks/uat-10/subnets/UATSubnet",
            "name": "UATSubnet",
            "resource_group_name": "UATRG",
            "virtual_network_name": "uat-10"
          },
          "dependencies": [
            "module.module_uat.azurerm_resource_group.rg",
            "module.module_uat.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_uat",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "module.module_uat.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/virtualNetworks/uat-10/subnets/UATSubnet",
            "network_security_group_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/networkSecurityGroups/uat-nsg1",
            "subnet_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/virtualNetworks/uat-10/subnets/UATSubnet"
          },
          "dependencies": [
            "module.module_uat.azurerm_network_security_group.nsg1",
            "module.module_uat.azurerm_resource_group.rg",
            "module.module_uat.azurerm_subnet.subnet1",
            "module.module_uat.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_uat",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "module.module_uat.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.30.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "62a24995-fb5b-4bdb-b8b5-3ec6b5ef70ce",
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/virtualNetworks/uat-10",
            "location": "eastus",
            "name": "uat-10",
            "resource_group_name": "UATRG",
            "subnet": [
              {
                "address_prefix": "10.30.1.0/24",
                "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/virtualNetworks/uat-10/subnets/UATSubnet",
                "name": "UATSubnet",
                "security_group": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/UATRG/providers/Microsoft.Network/networkSecurityGroups/uat-nsg1"
              }
            ]
          },
          "dependencies": [
            "module.module_uat.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}